# MedTrace-AI

./: .env.example  .gitignore  CLAUDE.md  DBMS-design.md  README.md  agent.py  app.py  clinical_ontology.py  deep_clinical_agent.py  document_ingest.py  implementation_plan.md  page.tsx  pubmed_eutils.py  pyproject.toml  pytest.ini  requirements.txt  skills-lock.json  style.css  walkthrough.md  zep_graph.py
Frontend/: .env.example  README.md  design.md  metadata.json  package-lock.json  package.json  tsconfig.json
Frontend/src/: index.css  vite-env.d.ts
apps/: streamlit_app.py
apps/api/: __init__.py  dependencies.py  main.py  schemas.py
backend/: README.md  agent.py  app.py  database.py  main.py  requirements.txt  test_transcribe.py  voice_handler.py
backend/model_adapters/: __init__.py  medgemma.py  medsam2.py
copilotkit-server/: package-lock.json  package.json  server.ts  tsconfig.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
migrations/: 20260510083259_medtrace-app-schema.sql  20260510160000_medtrace-app-rls.sql  20260511120000_chart-subjects-metadata.sql  20260512000000_medtrace-demo-mode.sql
mock/patient_data/: README.md  patient_01.json  patient_02.json  patient_03.json  patient_04.json  patient_05.json  patient_06.json  patient_07.json  patient_08.json  patient_09.json  patient_10.json
scripts/: fireworks_probe_models.py  seed_mock_patients.py  seed_reese_dalton.sh
services/medsamlite/: README.md  app_basic.py  pyproject.toml  spec.md
services/medsamlite/swin_demo/: __init__.py  inference_core.py
services/medsamlite/web/: index.html
src/: App.tsx  styles.css
tests/: conftest.py  test_mock_patient_data.py  test_patient_json.py  test_pubmed.py  test_pubmed_eutils.py
(+49 files in other folders)
