[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medtrace-agent"
version = "0.2.0"
description = "Zep-backed clinical memory demo with LangChain agents (RAG + Deep Agent) and Streamlit UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langtrace-python-sdk>=2.1.0",
    "streamlit>=1.28.0",
    "zep-cloud>=3.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "deepagents>=0.5.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: calls external APIs (NCBI PubMed)",
]
pythonpath = ["src"]
