[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swin-litemedsam-demo"
version = "0.1.0"
description = "Basic web frontend for Swin-LiteMedSAM box-to-mask segmentation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "scipy>=1.11.0",
    "pillow>=10.0.0",
    "connected-components-3d>=3.12.0",
    "omegaconf>=2.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["swin_demo*"]
